# member_dialects

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
dialect_tests/: test_main_or_subst.py  test_main_subst_delegate.py  test_sfs.py  test_skk_fum.py  test_skr_agarrad.py
dialects/: apps.py  main_or_subst_er.py  main_subst_delegate.py  sfs.py  skk_fum.py  skr_agarrad.py
dialects/locale/sv/LC_MESSAGES/: django.mo  django.po
