[project]
name = "member_dialects"
version = "1.0.0"
description = "VoteIT member dialects"
authors = [
    {name = "VoteIT dev team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "voteit",
    "django"
]

[project.urls]
Homepage = "https://www.voteit.se/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dialects"]

[tool.hatch.build.targets.sdist]
packages = ["dialects"]


[tool.ruff]
include = ["pyproject.toml", "dialects/**/*.py", "src/**/*.py"]
